--- a/src/component/Hero/hero.css
+++ b/src/component/Hero/hero.css
@@ -3,7 +3,7 @@
 }
 .hero__inner-cont{
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
  
   place-content: center;
   padding: 2rem 0;
@@ -18,9 +18,8 @@
   display: flex;
   gap: 1rem;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
- 
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 .buttondiv{ 
   display: flex;
@@ -33,7 +32,7 @@
   line-height: 120%;
   color: #0a0a0a;
   width: 90%;
-  text-align: center;
+  
 }
 .hero__inner-cont__left p {
   font-style: normal;
@@ -41,7 +40,7 @@
   font-size: 19px;
   line-height: 160%;
   color: #0a0a0a;
-  text-align: center;
+
  
 
 }
@@ -55,6 +54,11 @@
 
 @media screen and (max-width: 1020px) {
 
+  .hero__inner-cont__left{
+    justify-content: center;
+    align-items: center;
+  }
+
   .hero__inner-cont__left h1{
   
     font-size:calc( 48px - 30%) ;
@@ -65,6 +69,9 @@
   .buttondiv{
     display: flex;
     justify-content: center;
+   
+  }
+  .hero-btn{
     align-items: center;
   }
   .hero__inner-cont__left p {
@@ -79,6 +86,8 @@
     -50px -50px 0 -40px blue,
     50px 50px 0 -40px blue;
 }
+
+
 
   }
 
