--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ body{
   font-family: 'Manrope', sans-serif;
   line-height:1.6;
   font-size: 0.9rem;
-  background:   whitesmoke  ;
+  background:   #040C18; 
+  color: white;
 }
 
 
