--- a/src/component/Navbar/Navbar/navbar.css
+++ b/src/component/Navbar/Navbar/navbar.css
@@ -1,33 +1,13 @@
- /* nav{
-    width: 100vw;
-    height: 5rem;
-    display: grid;
-    place-items: center;
-    background:    #121627 ;
-  
-    transition: var(--transition);
-    -webkit-transition: var(--transition);
-    -moz-transition: var(--transition);
-    -ms-transition: var(--transition);
-    -o-transition: var(--transition);
-}  */
 
-/* nav{
-    width: 100%;
-    padding: 02rem;
-    display: grid;
-    place-items: center;
-    transition: var(--transition);
-} */
 
 nav{
-    background:  whitesmoke ; 
+    background: #040C18; ; 
     position: sticky;
     top: 0px;
     border-radius: 10px;
     z-index: 1000;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
- 
+    color: #fff;
    
 }
 .nav__container{
@@ -42,7 +22,13 @@ nav{
 .nav-link {
   display: flex;
   gap: 2rem;
+ 
+  
 }
+.nav-link a{
+    color: #fff;
+}
+
 
 .nav__btn {
     display: flex;
