--- a/src/component/About/about.css
+++ b/src/component/About/about.css
@@ -22,8 +22,11 @@
     text-align: center;
     padding: 1rem;
     border-radius: var(--border-radius-3);
-    background: rgba(44, 44, 63, 0.737);
+    background:#1f5143;
 }
+.icon1{color:rgb(223, 255, 127)}
+.icon2{color:rgb(255, 127, 221)}
+.icon3{color:rgb(255, 240, 127)}
 
 .about__card-icon{
     font-size: 2rem;
@@ -33,7 +36,7 @@
     align-items: center;
     transition: var(--transition);
     border-radius: var(--border-radius-3);
-    background: rgb(3, 3, 35);
+    background: #2f5e50;
 }
 
 .card.about__card h5{
