--- a/src/component/Hero/hero.css
+++ b/src/component/Hero/hero.css
@@ -1,18 +1,25 @@
 .hero__container{
-    
-}
+ 
+  }
+  .hero__inner-cont{
+    height: 90vh;
+  }
 .hero__inner-cont{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
- 
+
   place-content: center;
-  padding: 2rem 0;
+
+
+
 }
 .image{
-  background-repeat: cover; 
-  width: 100%; 
-  height: 90%;
-  padding-top: 2rem;
+  /* background-repeat: cover;  */
+  width: 90%; 
+  height: auto;
+  
+ 
+
 }
 .hero__inner-cont__left{
   display: flex;
@@ -20,6 +27,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  margin: 10rem  7rem 7rem ;
 }
 .buttondiv{ 
   display: flex;
