--- a/src/component/Hero1/hero1.css
+++ b/src/component/Hero1/hero1.css
@@ -1,11 +1,12 @@
-
+@import url(../../fonts/stylesheet.css);
 
 .hero__inner-cont{
-  height: 90vh;
+  
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 
   place-content: center;
+  /* background: url(../../asset/why-us-pattern1.png); */
 
 
 
@@ -14,42 +15,100 @@
   /* background-repeat: cover;  */
   width: 90%; 
   height: auto;
-  
- 
 
 }
+
 .hero__inner-cont__left{
   display: flex;
+  /* background: #6b63633e; */
   gap: 1rem;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  /* margin: 7rem  0; */
+  justify-content: center;
+  align-items:flex-start;
+  margin-top: 3rem;
+ 
+ 
+}
+
+.heading{
+  color: #CA51E3;
+  
 }
 .buttondiv{ 
   display: flex;
   gap: 1rem;
+  flex-wrap: wrap;
 
 }
-.hero__inner-cont__left h1{
+.hero-heading{
   font-weight: 900;
   font-size: 48px;
-  line-height: 120%;
+  line-height: 100%;
   width: 90%;
-  
+  font-family: 'Logik Wide Semi', var(--font-oswald);
+  font-style: normal;
+
 }
+.hero-heading span{
+  color: #CA51E3;
+}
+
 .hero__inner-cont__left p {
   font-style: normal;
   font-weight: 400;
-  font-size: 19px;
+  font-size: 14px;
   line-height: 160%;
+  font-family: var(--font-roboto);
 }
 .hero__inner-cont__left__btn{
   align-items: flex-start;
-  color: #fff;
   margin-right: 10px;
   margin-bottom: 10px;
 }
+.hero-btn a{
+ color: #1c1c1c;
+  font-weight: 700;
+  font-family: 'Logik Wide Semi', var(--font-oswald);
+ 
+}
+
+
+/* NEW HERO */
+.hero-main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero-text h1{
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 600;
+ max-width: 20ch;
+}
+.image{
+  
+  width: 100%;
+  height: 100%;
+  
+ 
+
+}
+
+.hero-img{
+
+
+
+
+
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+.hero-text span{
+  color: #CA51E3;
+}
+
 
 
 @media screen and (max-width: 1020px) {
@@ -57,15 +116,15 @@
   .hero__inner-cont__left{
     justify-content: flex-start;
     align-items: flex-start;
-    /* margin: 5rem 0rem   ; */
+    margin: 2rem 0rem   ;
   }
 
   .hero__inner-cont__left h1{
   
-    font-size:calc( 48px - 30%) ;
+    font-size:calc( 48px - 50%) ;
     line-height: calc(120% - 20%);
    
-    width: calc(90 - 20%)
+ 
   }
   .buttondiv{
     display: flex;
@@ -75,15 +134,11 @@
 
   .hero__inner-cont__left p {
     font-style: normal;
-    width: calc(90% - 10%);
+    /* width: calc(90% - 10%); */
     font-weight: 400;
     font-size: calc(19px - 20%);
     line-height: calc(160% - 20%);
 
-
-    box-shadow:
-    -50px -50px 0 -40px blue,
-    50px 50px 0 -40px blue;
 }
 
 
@@ -94,7 +149,7 @@
   .hero__inner-cont{
     display: grid;
     grid-template-columns:1fr;
-    /* margin: 5rem 0rem ; */
+    margin-top: 5rem;
     place-content: center;
   }
   .hero__inner-cont__left p, .hero__inner-cont__left h1{
