--- a/src/component/Abtt/abtt.css
+++ b/src/component/Abtt/abtt.css
@@ -1,6 +1,6 @@
 @import url(../../fonts/stylesheet.css);
 .abtt-container{
-    background: rgb(1, 32, 25);
+    background:  #1c2a28;
     border-radius: 1.5rem;
    
   margin: 5rem 0;
