--- a/src/component/Footer/footer.css
+++ b/src/component/Footer/footer.css
@@ -25,7 +25,7 @@
 }
 .footer__logo a {
       
-    color: #CA51E3 ;
+    color: #f3b54c  ;
     transition: var(--transition);
     margin-left: 1.5rem;
     font-size: 2rem;
