--- a/src/component/Hero1/hero1.css
+++ b/src/component/Hero1/hero1.css
@@ -31,7 +31,7 @@
 }
 
 .heading{
-  color: #CA51E3;
+  color: #f3b54c ;
   
 }
 .buttondiv{ 
@@ -50,7 +50,7 @@
 
 }
 .hero-heading span{
-  color: #CA51E3;
+  color: #f3b54c ;
 }
 
 .hero__inner-cont__left p {
@@ -106,7 +106,7 @@
 
 }
 .hero-text span{
-  color: #CA51E3;
+  color: #f3b54c ;
 }
 
 
