--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ a{
   padding:10px 22px ;
   font-weight: 500;
   text-align: center;
-  background: #ca51e3;
+  background: #f3b54c ;
   border-radius: 6px;
 }
 .btn-trans{
