--- a/src/component/Navbar/Navbar/navbar.css
+++ b/src/component/Navbar/Navbar/navbar.css
@@ -96,8 +96,9 @@ nav{
         display: flex;       
         
         flex-direction: column;
+        align-items: center;
         gap: 1rem;
-        text-align: center;
+        text-align: left;
         height: fit-content;
         width: 100%;
         z-index: -50;
@@ -105,11 +106,12 @@ nav{
         #1c2a28 ;
        border-radius: 2rem;
     }
-    .nav__menu-link{
+    .nav__menu-link li a{
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        margin: 1rem 0;
+        margin: 1rem 0; color: #fff;
+        
     }
 
     .nav__menu-btn{
@@ -120,10 +122,12 @@ nav{
 
 @media screen and (max-width: 790px) {
    
-   .nav__menu-link{
+   .nav__menu-link li a {
         display: flex;
         flex-direction: column;
+        
         gap: 1rem;
+        color: #fff;
         
     }
     .nav__menu-btn{
