--- a/src/component/Navbar/Navbar/navbar.css
+++ b/src/component/Navbar/Navbar/navbar.css
@@ -18,6 +18,7 @@ nav{
 .navbar.colorChange{
     background-color:   
     #1c2a28;
+    font-family: 'Logik Wide';
 }
 
 .nav__container{
@@ -93,8 +94,8 @@ nav{
     }
     
     .nav__menu-container{ 
-        display: flex;       
-        
+           
+        display: inline-flex;
         flex-direction: column;
         align-items: center;
         gap: 1rem;
@@ -106,12 +107,20 @@ nav{
         #1c2a28 ;
        border-radius: 2rem;
     }
-    .nav__menu-link li a{
+    .nav__menu-link {
+      
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        margin: 1rem 0; color: #fff;
         
+    }
+    .nav__menu-link li a{
+        color: #fff;
+    }
+    .nav__menu-link li img{
+        display: inline;
+        width: 0.7rem;
+        margin-right: 0.5rem;
     }
 
     .nav__menu-btn{
@@ -122,11 +131,12 @@ nav{
 
 @media screen and (max-width: 790px) {
    
+   
    .nav__menu-link li a {
-        display: flex;
+        display: inline-flex;
         flex-direction: column;
         
-        gap: 1rem;
+        
         color: #fff;
         
     }
@@ -134,7 +144,7 @@ nav{
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 1rem;
+        margin-top: 1rem;
  
         
         
